feat: add basic responsiveness

--- a/src/index.html
+++ b/src/index.html
@@ -36,14 +36,14 @@
     </head>
     <body>
         <div class="bg-intro">
-            <div class="intro-text">
+            <div class="intro-outro-text intro-text">
                 <div><span class="number">662</span> vun <span class="number">1000</span></div>
                 <div>Letzebuerger</div>
                 <div>hunn en Auto</div>
             </div>
         </div>
         <div class="bg-outro">
-            <div class="outro-text">
+            <div class="intro-outro-text outro-text">
                 <div>Hëllef eis deenen</div>
                 <div>aneren <span class="number">338</span> och</div>
                 <div>och een ze ginn!</div>
